// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link-pure accessibility should expose correct accessibility tree description if subline property is set 1`] = `
Object {
  "description": "Some Subline",
  "name": "Some label",
  "role": "link",
}
`;

exports[`link-pure accessibility should expose correct accessibility tree if accessibility properties are set 1`] = `
Object {
  "name": "Some more detailed label",
  "role": "link",
}
`;

exports[`link-pure accessibility should expose correct accessibility tree if label is hidden 1`] = `
Object {
  "name": "Some label",
  "role": "link",
}
`;

exports[`link-pure accessibility should expose correct initial accessibility tree properties 1`] = `
Object {
  "name": "Some label",
  "role": "link",
}
`;
